--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -10,7 +10,6 @@ on:
       - opened
 env:
   HEAD_REF: ${{ github.head_ref }}
-  GO_VERSION: 1.25.4
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -28,7 +27,7 @@ jobs:
 
       - uses: actions/setup-go@v5.5.0
         with:
-          go-version: ${{ env.GO_VERSION }}
+          go-version: ${{ vars.GO_VERSION }}
 
       - name: build
         shell: bash
@@ -47,7 +46,7 @@ jobs:
 
       - uses: actions/setup-go@v5.5.0
         with:
-          go-version: ${{ env.GO_VERSION }}
+          go-version: ${{ vars.GO_VERSION }}
 
       - name: run tests
         shell: bash
