--- a/.github/workflows/weekly-test.yml
+++ b/.github/workflows/weekly-test.yml
@@ -6,8 +6,6 @@ on:
     - cron: '0 1 * * MON'
   workflow_dispatch:
 
-env:
-  GO_VERSION: 1.25.3
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -25,7 +23,7 @@ jobs:
 
       - uses: actions/setup-go@v5.5.0
         with:
-          go-version: ${{ env.GO_VERSION }}
+          go-version: ${{ vars.GO_VERSION }}
 
       - name: build
         shell: bash
@@ -51,7 +49,7 @@ jobs:
 
       - uses: actions/setup-go@v5.5.0
         with:
-          go-version: ${{ env.GO_VERSION }}
+          go-version: ${{ vars.GO_VERSION }}
 
       - name: run tests
         shell: bash
